@@ -1,3 +1,4 @@
+<<<<<<< HEAD
 # Media Center
 > Projeto de DSS 19/20
 
@@ -28,3 +29,23 @@ SHOW VARIABLES LIKE "secure_file_priv";
 ```
 mvn clean compile exec:java
 ```
+=======
+
+# MediaCenter
+
+![Main Page](main.PNG)
+
+
+## VMOPTIONS
+--module-path %PATH_TO_FX% --add-modules javafx.controls,javafx.fxml
+
+%PATH_TO_FX% -> "C:\Program Files\Java\javafx-sdk-13\lib"
+
+## DEPENDENCIES
+- VLC
+- Java 13
+- JavaFX 13
+
+## Disclaimer 
+This is not a final product.
+>>>>>>> master
